[tool.poetry]
name = "starknet.kt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python =  ">=3.7.2,<3.10"

[tool.poetry.dev-dependencies]
starknet-devnet = "^0.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
